--- a/_posts/2020-02-27-Glove.md
+++ b/_posts/2020-02-27-Glove.md
@@ -1,10 +1,14 @@
 ---
 layout: post
-title:  "nlp_GloVe"
-description: natural language processing.
-date:   2020-02-27
+title: GloVe
+categories:
+  - Programming
+tags:
+  - programming
+last_modified_at: 2020-02-23
 use_math: true
 ---
+
 
 ### GloVe
 natural language processing.
