--- a/_posts/2020-02-28-ELMo.md
+++ b/_posts/2020-02-28-ELMo.md
@@ -1,10 +1,14 @@
 ---
 layout: post
-title:  "nlp_ELMo"
-description: natural language processing.
-date:   2020-02-27
+title: Elmo
+categories:
+  - Programming
+tags:
+  - programming
+last_modified_at: 2020-02-23
 use_math: true
 ---
+
 
 ### ELMo
 natural language processing.
