--- a/_posts/2020-02-27-Glove.md
+++ b/_posts/2020-02-27-Glove.md
@@ -2,9 +2,9 @@
 layout: post
 title: GloVe
 categories:
-  - Programming
+  - Study_program
 tags:
-  - programming
+  - Study_program
 last_modified_at: 2020-02-23
 use_math: true
 ---
