--- a/_posts/2020-03-20-kr-2nd paper.md
+++ b/_posts/2020-03-20-kr-2nd paper.md
@@ -5,10 +5,8 @@ categories:
   - Paper
 tags:
   - economic
-  - Uncertainty 
-  - Heterogeneity
-  - Firm level data
-  - investment
+  - Machine Learning 
+  - prediction
   - Panel
 last_modified_at: 2020-03-19
 use_math: true
