--- a/_posts/2020-03-20-kr-1st paper.md
+++ b/_posts/2020-03-20-kr-1st paper.md
@@ -2,7 +2,7 @@
 layout: post
 title: (kr_version)1st paper[Heterogeneity of firm investment in uncertainty-using individual firm's panel data]
 categories:
-  - Paper
+  - Research
 tags:
   - economic
   - Uncertainty 
