--- a/_posts/2020-03-20-kr-2nd paper.md
+++ b/_posts/2020-03-20-kr-2nd paper.md
@@ -2,7 +2,7 @@
 layout: post
 title: (kr_version)2nd paper[Transition of rehabilitation service's importance in prediction of industrial accident worker's return to work using Machine Learing ]
 categories:
-  - Paper
+  - Research
 tags:
   - economic
   - Machine Learning 
